fix extraction error in template

--- a/grc/templates/submit-and-pay/check-your-answers.html
+++ b/grc/templates/submit-and-pay/check-your-answers.html
@@ -465,17 +465,17 @@
 
 
             <h2 class="govuk-heading-m">
-                {{ _('Documents you'll need to post') }}
+                 {{ _("Documents you'll need to post") }}
             </h2>
             <p class="govuk-body govuk-!-margin-bottom-2">
-                {{ _('Based on your application the documents that will need to be posted are:') }}
+                 {{ _('Based on your application the documents that will need to be posted are:') }}
             </p>
 
             <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-9">
                 <li>
                     {{ _('your original or a') }}
                     <a href="https://www.gov.uk/certifying-a-document" rel="external" target="_blank" class="govuk-link">
-                        {{ _('certified copy (opens in a new tab)') }}
+                        {{ _("certified copy (opens in a new tab)") }}
                     </a>
                     {{ _('of your full birth or adoption certificate') }}
                 </li>
@@ -485,7 +485,7 @@
                          {{ _('an') }}
                         <a href="https://www.gov.uk/government/publications/apply-for-help-with-court-and-tribunal-fees"
                            rel="external" target="_blank" class="govuk-link">
-                             {{ _('EX160 form (opens in a new tab)') }}
+                              {{ _('EX160 form (opens in a new tab)') }}
                         </a>
                     </li>
                 {% endif %}
