--- a/grc/templates/submit-and-pay/check-your-answers.html
+++ b/grc/templates/submit-and-pay/check-your-answers.html
@@ -59,7 +59,7 @@
 
             <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                 {{ check_your_answers_row(
-                    title=_('Name as you would like it to appear on your Gender Recognition Certificate)'),
+                    title=_('Name (as you would like it to appear on your Gender Recognition Certificate)'),
                     changeLinkHiddenText='name (as you would like it to appear on your Gender Recognition Certificate)',
                     changeLinkUrlFor='personalDetails.index',
                     value=(application_data.personal_details_data.full_name)
