reformat full stop

--- a/grc/templates/submit-and-pay/help-type.html
+++ b/grc/templates/submit-and-pay/help-type.html
@@ -24,8 +24,8 @@
                 {{ _('You can') }}
                 <a href="https://www.gov.uk/government/publications/apply-for-help-with-court-and-tribunal-fees"
                    target="_blank" rel="external" class="govuk-link">
-                    {{ _('apply online for help paying this fee (opens in a new tab)') }}
-                </a>.
+                    {{ _('apply online for help paying this fee (opens in a new tab)') }}.
+                </a>
             </p>
             <p class="govuk-body govuk-!-margin-bottom-8">
                  {{ _('You can also download the EX160 form from that page and submit it with your application.') }}
