reformat link in method template

--- a/grc/templates/submit-and-pay/method.html
+++ b/grc/templates/submit-and-pay/method.html
@@ -27,8 +27,8 @@
                 {{ _('You can') }}
                 <a href="https://www.gov.uk/get-help-with-court-fees"
                    rel="external" target="_blank" class="govuk-link">
-                    {{ _('apply online for help paying this fee (opens in a new tab)') }}
-                </a>.
+                    {{ _('apply online for help paying this fee (opens in a new tab)') }}.
+                </a>
             </p>
             <p class="govuk-body govuk-!-margin-bottom-8">
                 {{ _('You can also download the EX160 form from that page and submit it with your application.') }}
