Rebase confirmation onto latest cya

--- a/grc/templates/submit-and-pay/confirmation.html
+++ b/grc/templates/submit-and-pay/confirmation.html
@@ -23,7 +23,8 @@
                 {{ _('What you need to do next') }}
             </h2>
             <p class="govuk-body">
-                {{ _('Post your birth or adoption certificate to us as soon as possible – include your name, address and application reference number so we can match it to your application. Send either an original or a') }}
+                {{ _('Post your birth or adoption certificate to us as soon as possible – include your name, address and application reference number so we can match it to your application.') }}
+                {{ _('Send either an original or a') }}
                 <a href="https://www.gov.uk/certifying-a-document" rel="external" target="_blank" class="govuk-link">{{ _('certified copy (opens in a new tab)') }}</a>
                 {{ _('– it will be posted back to you.') }}
             </p>
@@ -58,7 +59,7 @@
                     {{ _('order a birth, death, marriage or civil partnership certificate (opens in a new tab)') }}
                 </a>
                 {{ _('online if you live in England and Wales.') }}
-                {{ _('There's a different process for') }}
+                {{ _("There's a different process for") }}
                 <a href="http://www.nrscotland.gov.uk/registration/how-to-order-an-official-extract-from-the-registers"
                    target="_blank" rel="external" class="govuk-link">
                     {{ _('getting certificates in Scotland (opens in a new tab)') }}
