--- a/grc/templates/submit-and-pay/check-your-answers.html
+++ b/grc/templates/submit-and-pay/check-your-answers.html
@@ -489,8 +489,8 @@
             <p class="govuk-body govuk-!-margin-bottom-9">
                  {{ _('If you want to keep a record of the details you are submitting, you can') }}
                 <a href="{{ url_for('submitAndPay.download') }}" target="_blank" class="govuk-link">
-                     {{ _('download a pdf copy') }}
-                </a>.
+                     {{ _('download a pdf copy') }}.
+                </a>
             </p>
 
             <h2 class="govuk-heading-m">
