--- a/grc/templates/start-application/application-already-submitted.html
+++ b/grc/templates/start-application/application-already-submitted.html
@@ -27,7 +27,7 @@
                 <a href="mailto:GRPenquiries@justice.gov.uk" class="govuk-link">
                     GRPenquiries@justice.gov.uk
                 </a><br>
-                {{ _('Telephone:') }} 020 3936 8968<br>
+                {{ _('Telephone') }}: 020 3936 8968<br>
                 {{ _('Monday to Friday, 9am to 5pm') }}<br>
                 <a href=https://www.gov.uk/call-charges"
                    target="_blank" class="govuk-link">
