--- a/grc/templates/custom-error-templates/429.html
+++ b/grc/templates/custom-error-templates/429.html
@@ -11,7 +11,7 @@
                 {{ _('Sorry, the service is unavailable') }}
             </h1>
             <p class="govuk-body">
-                {{ _('The rate limit for this page has been exceeded. Please try again later') }}
+                {{ _('The rate limit for this page has been exceeded. Please try again later.') }}
             </p>
             {{ contact_admin.render() }}
 
