--- a/grc/templates/custom-error-templates/429.html
+++ b/grc/templates/custom-error-templates/429.html
@@ -1,28 +1,19 @@
 {% extends 'base.html' %}
+{% import "contact-admin.html" as contact_admin %}
 
-{% block title %}Sorry, the service is unavailable{% endblock %}
+{% block title %}{{ _('Sorry, the service is unavailable') }}{% endblock %}
 
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
 
             <h1 class="govuk-heading-l">
-                Sorry, the service is unavailable
+                {{ _('Sorry, the service is unavailable') }}
             </h1>
             <p class="govuk-body">
-                The rate limit for this page has been exceeded. Please try again later
+                {{ _('The rate limit for this page has been exceeded. Please try again later.') }}
             </p>
-            <p class="govuk-body">
-                <a href="mailto:GRPenquiries@justice.gov.uk" class="govuk-link">
-                    GRPenquiries@justice.gov.uk
-                </a><br>
-                Telephone: 020 3936 8968<br>
-                Monday to Friday, 9am to 5pm<br>
-                <a href=https://www.gov.uk/call-charges"
-                   target="_blank" class="govuk-link">
-                    Find out about call charges (opens in a new tab)
-                </a>
-            </p>
+            {{ contact_admin.render() }}
 
         </div>
     </div>
