--- a/grc/templates/custom-error-templates/error-default.html
+++ b/grc/templates/custom-error-templates/error-default.html
@@ -1,34 +1,25 @@
 {% extends 'base.html' %}
+{% import "contact-admin.html" as contact_admin %}
 
-{% block title %}Sorry, there is a problem with the service{% endblock %}
+{% block title %}{{ _('Sorry, there is a problem with the service') }}{% endblock %}
 
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
 
             <h1 class="govuk-heading-l">
-                Sorry, there is a problem with the service
+                {{ _('Sorry, there is a problem with the service') }}
             </h1>
             <p class="govuk-body">
-                Please try again later.
+                {{ _('Please try again later.') }}
             </p>
             <p class="govuk-body">
-                We have saved your answers. They will be available for 6 months.
+                {{ _('We have saved your answers. They will be available for 6 months.') }}
             </p>
             <p class="govuk-body">
-                Contact the admin team if you need help with your application.
+                {{ _('Contact the admin team if you need help with your application.') }}
             </p>
-            <p class="govuk-body">
-                <a href="mailto:GRPenquiries@justice.gov.uk" class="govuk-link">
-                    GRPenquiries@justice.gov.uk
-                </a><br>
-                Telephone: 020 3936 8968<br>
-                Monday to Friday, 9am to 5pm<br>
-                <a href=https://www.gov.uk/call-charges"
-                   target="_blank" class="govuk-link">
-                    Find out about call charges (opens in a new tab)
-                </a>
-            </p>
+            {{ contact_admin.render() }}
 
         </div>
     </div>
