RST 6699 it birth reg

--- a/grc/templates/birth-registration/forces.html
+++ b/grc/templates/birth-registration/forces.html
@@ -20,8 +20,7 @@
                 {{ radios.renderFor(
                     form,
                     fieldName='forces',
-                    question="Was your birth registered by a Forces registering service, or with a British Consul or
-                              High Commission, or under Merchant Shipping or Civil Aviation provisions?",
+                    question="Was your birth registered by a Forces registering service, or with a British Consul or High Commission, or under Merchant Shipping or Civil Aviation provisions?",
                     radiosOptions={
                         'questionIsPageHeading': true,
                         'hintOptions':{
