--- a/grc/templates/applications/download_user.html
+++ b/grc/templates/applications/download_user.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="theme-color" content="#0b0c0c">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link href="{{url_for('static', filename='app.css')}}" rel="stylesheet">
 </head>
 
 <body class="govuk-template__body">
