--- a/grc/templates/document-checker/gender-recognition-outside-uk.html
+++ b/grc/templates/document-checker/gender-recognition-outside-uk.html
@@ -28,47 +28,36 @@
                 The documents you need to provide are different if you have received gender recognition in a country or territory from this list:
             </p>
             <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-8">
-                <li>Australia – not including the external territories</li>
-                <li>Austria</li>
-                <li>Belgium</li>
-                <li>Bulgaria</li>
-                <li>Canada – not including Northwest Territories and Nunavut</li>
+                <li>Australia - only includes the Australian Capital Territory, New South Wales, Queensland and Western Australia</li>
+                <li>Bosnia and Herzegovina</li>
+                <li>Belarus</li>
+                <li>China</li>
                 <li>Croatia</li>
-                <li>Cyprus</li>
+                <li>Cuba</li>
+                <li>Republic of Cyprus</li>
                 <li>Czech Republic</li>
-                <li>Denmark</li>
                 <li>Estonia</li>
-                <li>Finland</li>
-                <li>France</li>
+                <li>Georgia</li>
                 <li>Germany</li>
-                <li>Greece</li>
-                <li>Iceland</li>
+                <li>India</li>
+                <li>Iran</li>
                 <li>Italy</li>
                 <li>Japan</li>
-                <li>Liechtenstein</li>
-                <li>Luxembourg</li>
-                <li>Malta</li>
-                <li>Federal District of Mexico</li>
-                <li>Moldova</li>
-                <li>Netherlands</li>
-                <li>New Zealand</li>
-                <li>Norway</li>
-                <li>Poland</li>
+                <li>Kazakhstan</li>
+                <li>Mongolia</li>
+                <li>Montenegro</li>
+                <li>Namibia</li>
+                <li>Panama</li>
                 <li>Romania</li>
-                <li>Russian Federation</li>
-                <li>Serbia</li>
-                <li>Singapore</li>
                 <li>Slovakia</li>
-                <li>Slovenia</li>
                 <li>South Africa</li>
                 <li>South Korea</li>
-                <li>Spain</li>
+                <li>Sri Lanka</li>
                 <li>Sweden</li>
-                <li>Switzerland</li>
+                <li>Taiwan</li>
                 <li>Turkey</li>
                 <li>Ukraine</li>
-                <li>United States of America – not including Idaho, Ohio, Tennessee and Texas</li>
-                <li>Uruguay</li>
+                <li>United States of America – only includes Alabama, Alaska, Arizona, Arkansas, Connecticut, Delaware, Georgia, Indiana, Iowa, Kansas, Kentucky, Louisiana, Maryland, Massachusetts, Missouri, Nebraska, New Hampshire, North Carolina, North Dakota, Pennsylvania and Wisconsin</li>
             </ul>
 
             <form method="POST" action="{{ url_for('documentChecker.genderRecognitionOutsideUK') }}">
