RST-6479 add new google tag base templates

--- a/grc/templates/base.html
+++ b/grc/templates/base.html
@@ -34,6 +34,12 @@
 </head>
 
 <body class="govuk-template__body">
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MDKL48M5"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <script>
         document.body.className = document.body.className ? document.body.className + ' js-enabled' : 'js-enabled'
     </script>
