--- a/grc/templates/document-checker/doc-checker-base.html
+++ b/grc/templates/document-checker/doc-checker-base.html
@@ -56,6 +56,8 @@
             document.body.className = document.body.className ? document.body.className + ' js-enabled' : 'js-enabled'
         </script>
 
+        {% include "policies/cookie-banner.html" %}
+
         <a href="#main-content" class="govuk-skip-link">Skip to main content</a>
 
         <header class="govuk-header" role="banner" data-module="govuk-header">
@@ -190,6 +192,11 @@
         </footer>
 
         <script src="{{ url_for('static', filename='assets/govuk-frontend-3.14.0.min.js') }}"></script>
+        <script>
+            window.TRACKING_PREVIEW_ID = '09GCMPLXM8';
+            window.TRACKING_LIVE_ID = '09GCMPLXM8';
+        </script>
+        <script src="{{ url_for('static', filename='application.js') }}"></script>
         <script>
             window.GOVUKFrontend.initAll()
         </script>
