Add support links to footer

--- a/grc/templates/document-checker/doc-checker-base.html
+++ b/grc/templates/document-checker/doc-checker-base.html
@@ -166,6 +166,24 @@
             <div class="govuk-width-container">
                 <div class="govuk-footer__meta">
                     <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
+                        <h2 class="govuk-visually-hidden">Support links</h2>
+                        <ul class="govuk-footer__inline-list">
+                            <li class="govuk-footer__inline-list-item">
+                                <a class="govuk-footer__link" href="{{ url_for('policies.privacy_policy') }}">
+                                    {{ _('Privacy policy') }}
+                                </a>
+                            </li>
+                            <li class="govuk-footer__inline-list-item">
+                                <a class="govuk-footer__link" href="{{ url_for('policies.accessibility_statement') }}">
+                                    {{ _('Accessibility statement') }}
+                                </a>
+                            </li>
+                            <li class="govuk-footer__inline-list-item">
+                                <a class="govuk-footer__link" href="{{ url_for('policies.cookies') }}">
+                                    {{ _('Cookies') }}
+                                </a>
+                            </li>
+                        </ul>
                         <svg aria-hidden="true" focusable="false" class="govuk-footer__licence-logo"
                              xmlns="http://www.w3.org/2000/svg" viewBox="0 0 483.2 195.7" height="17" width="41">
                             <path fill="currentColor"
