--- a/admin/templates/applications/download.html
+++ b/admin/templates/applications/download.html
@@ -1,13 +1,13 @@
-{% from 'applications/application.html' import adminapplication %}
+{% from 'applications/application-pdfkit.html' import adminapplication %}
 <!DOCTYPE html>
-<html lang="en" class="govuk-template">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>GOV.UK - Gender Recognition Certificate Application</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
         <meta name="theme-color" content="#0b0c0c">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link href="{{url_for('static', filename='app.css')}}" rel="stylesheet">
+        <link href="{{url_for('static', filename='app.css', _external=True)}}" rel="stylesheet">
     </head>
 
     <body class="govuk-template__body">
