--- a/grc/templates/document-checker/doc-checker-base.html
+++ b/grc/templates/document-checker/doc-checker-base.html
@@ -76,7 +76,7 @@
                     </a>
                 </div>
                 <div class="govuk-header__content">
-                    <a href="{{ url_for('documentChecker.index') }}" class="govuk-header__link govuk-header__link--service-name">
+                    <a href="{{ url_for('documentChecker.index') }}" class="govuk-header__link govuk-header__service-name">
                         {{ _('Check documents needed to apply for a Gender Recognition Certificate') }}
                     </a>
                 </div>
@@ -88,7 +88,7 @@
                 <p class="govuk-phase-banner__content govuk-!-width-full">
                     <span class="govuk-phase-banner__text">
                         <strong class="govuk-tag govuk-phase-banner__content__tag">
-                            beta
+                            Beta
                         </strong>
                         This is a new service - your
                         <a href="{{ url_for('feedback.feedback_page') }}" class="govuk-link">
@@ -203,14 +203,15 @@
             </div>
         </footer>
 
-        <script src="{{ url_for('static', filename='assets/govuk-frontend-3.14.0.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='assets/govuk-frontend-5.7.1.min.js') }}"></script>
         <script>
             window.TRACKING_PREVIEW_ID = '09GCMPLXM8';
             window.TRACKING_LIVE_ID = '09GCMPLXM8';
         </script>
         <script src="{{ url_for('static', filename='application.js') }}"></script>
-        <script>
-            window.GOVUKFrontend.initAll()
+        <script type="module">
+          import { initAll } from '{path-to-javascript}/govuk-frontend.min.js'
+          initAll()
         </script>
     </body>
 </html>
