--- a/admin/templates/base.html
+++ b/admin/templates/base.html
@@ -38,7 +38,7 @@
         document.body.className = document.body.className ? document.body.className + ' js-enabled' : 'js-enabled'
     </script>
 
-    <a href="#main-content" class="govuk-skip-link">Skip to main content</a>
+    <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link" >Skip to main content</a>
 
     <header class="govuk-header" role="banner" data-module="govuk-header">
         <div class="govuk-header__container govuk-width-container">
@@ -60,7 +60,7 @@
                 </a>
             </div>
             <div class="govuk-header__content">
-                <a href="/" class="govuk-header__link govuk-header__link--service-name">
+                <a href="/" class="govuk-header__link govuk-header__service-name">
                     Download GRC applications
                 </a>
                 <nav aria-label="Menu" class="govuk-header__navigation">
@@ -203,9 +203,10 @@
         </div>
     </footer>
 
-    <script src="{{ url_for('static', filename='assets/govuk-frontend-3.14.0.min.js') }}"></script>
-    <script>
-        window.GOVUKFrontend.initAll()
+    <script src="{{ url_for('static', filename='assets/govuk-frontend-5.1.7.min.js') }}"></script>
+    <script type="module">
+      import { initAll } from '{path-to-javascript}/govuk-frontend.min.js'
+      initAll()
     </script>
     {% block js %}{% endblock %}
 </body>
