--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -60,7 +60,7 @@
                 </a>
             </div>
             <div class="govuk-header__content">
-                <a href="/" class="govuk-header__link govuk-header__link--service-name">
+                <a href="/" class="govuk-header__link govuk-header__service-name">
                     GRC stats
                 </a>
             </div>
@@ -158,9 +158,10 @@
         </div>
     </footer>
 
-    <script src="{{ url_for('static', filename='assets/govuk-frontend-3.14.0.min.js') }}"></script>
-    <script>
-        window.GOVUKFrontend.initAll()
+    <script src="{{ url_for('static', filename='assets/govuk-frontend-5.1.7.min.js') }}"></script>
+    <script type="module">
+      import { initAll } from '{path-to-javascript}/govuk-frontend.min.js'
+      initAll()
     </script>
 </body>
 </html>
